hphp/test/quick/trailing_comma_bad3.php.expectf
Fatal error: syntax error, unexpected ',', expecting %s in %s on line 2
